[package]
name = "munge_auth"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Will-Shanks/munge"
description = "Safe bindings for munge https://github.com/dun/munge"
keywords = ["hpc", "security"]

[dependencies]
munge-sys = { version = "0.1", features = ["static"] }
libc = "0.2"
